--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
         <a href="https://umd.instructure.com/">ELMS Canvas</a>
     </p>
 
+    <h3>Home Page Candidate Links</h3>
+    <ol>
+        <li>https://anihassio.duckdns.org/lovelace</li>
+        <li>https://anithewise.github.io/</li>
+    </ol>
+
 </body>
 </html>
