--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <h3>Home Page Candidate Links</h3>
     <ol>
-        <li>https://anihassio.duckdns.org/lovelace</li>
-        <li>https://anithewise.github.io/</li>
+        <li><a href="https://anihassio.duckdns.org/lovelace">Home Assisstant</a></li>
+        <li><a href="https://anithewise.github.io/">github browser home page</a></li>
     </ol>
 
 </body>
