--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://umd.instructure.com/">ELMS Canvas</a>
     </p>
 
-    <h3>Home Page Candidate Links</h3>
+    <h3>Home Page Link Candidates</h3>
     <ol>
         <li><a href="https://anihassio.duckdns.org/lovelace">Home Assisstant</a></li>
         <li><a href="https://anithewise.github.io/">github browser home page</a></li>
