--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
 </head>
 <body>
+    <h1>UMD Spring 2022</h1>
     <p>
         M  - 2021 - JMP 2121 - ENPM661 - Planning
         <br>
