create todo list

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         Su -
     </p>
 
+    <h3>To Do List</h3>
+
+    <h3>Link to ELMS Canvas UMD Online Class Dashboard</h3>
     <p>
         <a href="https://umd.instructure.com/">ELMS Canvas</a>
     </p>
