update todo list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
     <h3>To Do List</h3>
 
+    <ol>
+        <li>Pick up clippers from pilot house</li>  
+        <li>Bike service at umd</li>  
+        <li>3d print stuff</li>  
+        <li>Read ch1 for enpm661</li>  
+        <li>Careers 4 terps resume</li>  
+        <li>Ejobs resume</li>  
+        <li>Reza enpm661 resume</li>  
+        <li>Enpm661 homework week 1</li>  
+        <li>CHANGE ALARM TUNE</li>  
+    </ol>
+
+
     <h3>Link to ELMS Canvas UMD Online Class Dashboard</h3>
     <p>
         <a href="https://umd.instructure.com/">ELMS Canvas</a>
