update todo list

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li>Reza enpm661 resume</li>  
         <li>Enpm661 homework week 1</li>  
         <li>CHANGE ALARM TUNE</li>  
+        <li>Find decorative lights</li>
+        <li>Call radha uncle</li>
     </ol>
 
 
