--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li>CHANGE ALARM TUNE</li>  
         <li>Find decorative lights</li>
         <li>Call radha uncle</li>
+        <li>hello test update page</li>
     </ol>
 
 
