--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
         <li>1</li>
         <li>2</li>
     </ol>
+
+    <h1>Bio</h1>
+    <h1>Interests</h1>
+    <h1>Projects</h1>
 </body>
 </html>
