--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Projects</h1>
     <div>
         <h3>E-Bike</h3>
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/ebike_on_train_0.2.jpg" alt="ebike_on_train">
     </div>
     <div>
         <h3>Little Mobile Robots</h3>
