--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div>
         <h3>E-Bike</h3>
         <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/ebike_on_train_0.2.jpg?raw=true" alt="ebike_on_train">
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_1_0.2.jpg?raw=true" alt="bike_odom_1">
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_2_0.2.jpg?raw=true" alt="bike_odom_2">
     </div>
     <div>
         <h3>Little Mobile Robots</h3>
