--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1>Projects</h1>
     <div>
         <h3>E-Bike</h3>
-        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/ebike_on_train_0.2.jpg?raw=true" alt="ebike_on_train">
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/ebike_on_train_0.2.jpg?raw=true" alt="ebike_on_train" height="300px">
         <br>
-        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_1_0.2.jpg?raw=true" alt="bike_odom_1">
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_1_0.2.jpg?raw=true" alt="bike_odom_1" height="300px">
         <br>
-        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_2_0.2.jpg?raw=true" alt="bike_odom_2">
+        <img src="https://github.com/anikk94/anikk94.github.io/blob/master/assets/images/bike_odom_2_0.2.jpg?raw=true" alt="bike_odom_2" height="300px">
         <br>
     </div>
     <div>
