--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <p>I converted my (MTB) bicycle into an e-bike. E-bike conversion kit: Voilamart 1000W rear wheel kit.</p>
         <p>Kit Specifications</p>
         <ul>
-            <li>Amazon.com listing: Voilamart Electric Bicycle Kit 26" Rear Wheel 48V 1000W E-Bike Conversion Kit with LCD Display, Cycling Hub Motor with Intelligent Controller and PAS System for Road Bike(Without Battery)</li>
+            <li>
+                <p><a href="https://www.amazon.com/dp/B08B5PLXBW?psc=1&ref=ppx_yo2ov_dt_b_product_details"></a></p>
+                <p>Amazon.com listing: Voilamart Electric Bicycle Kit 26" Rear Wheel 48V 1000W E-Bike Conversion Kit with LCD Display, Cycling Hub Motor with Intelligent Controller and PAS System for Road Bike(Without Battery)</p>
+            </li>
             <li>brand: Voilamart</li>
             <li>required read dropout: 135 mm</li>
             <li>motor
