--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p>Kit Specifications</p>
         <ul>
             <li>
-                <p><a href="https://www.amazon.com/dp/B08B5PLXBW?psc=1&ref=ppx_yo2ov_dt_b_product_details"></a></p>
-                <p>Amazon.com listing: Voilamart Electric Bicycle Kit 26" Rear Wheel 48V 1000W E-Bike Conversion Kit with LCD Display, Cycling Hub Motor with Intelligent Controller and PAS System for Road Bike(Without Battery)</p>
+                <p><a href="https://www.amazon.com/dp/B08B5PLXBW?psc=1&ref=ppx_yo2ov_dt_b_product_details">Amazon.com listing</a></p>
+                <p>Voilamart Electric Bicycle Kit 26" Rear Wheel 48V 1000W E-Bike Conversion Kit with LCD Display, Cycling Hub Motor with Intelligent Controller and PAS System for Road Bike(Without Battery)</p>
             </li>
             <li>brand: Voilamart</li>
             <li>required read dropout: 135 mm</li>
