--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1 align="center">Anirudh Krishnan Komaralingam</h1>
+    <table>
+        <tr>
+            <th>anikk.umd@gmail.com</th>
+            <th>github.com/anikk94</th>
+            <th>linkedin.com/in/anikk94</th>
+            <th>+1(240)-413 5766</th>
+        </tr>
+
+            
+    </table>
     <h1>anikk94.github.io</h1>
     <h1>Bio</h1>
     <div>
