--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 align="center">Anirudh Krishnan Komaralingam</h1>
-    <table style="border: 1px solid #ddd;">
+    <table style="border: 1px solid #ddd; align: center;">
         <tr>
             <th>anikk.umd@gmail.com</th>
             <th>github.com/anikk94</th>
