--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="page-subheading" align="center">
-            <p class="contacts-address">9409 Eagleton Ln, Gaithersburg, MD</p>
+            <p class="contacts-address">Gaithersburg, MD</p>
             <p class="contacts-info">
             <pre>+1(240)-413 5766       <a href="mailto: anikk.umd@gmail.com" style="text-decoration:none" >anikk.umd@gmail.com</a></pre>
             </p>
