--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         }
 
         .contacts-address {
-            margin-top: 0;
             font-size: 1em;
         }
 
@@ -38,6 +37,7 @@
         .page-heading {
             font-size: 1.2em;
             font-family: 'Courier New', Courier, monospace;
+            margin-bottom: 
         }
 
         .footer {
@@ -62,9 +62,7 @@
 
         <div class="page-heading" align="center">
             <!-- <h1 align="center">Anirudh Krishnan Komaralingam</h1> -->
-            <h1>
-                <pre>Anirudh Krishnan Komaralingam</pre>
-            </h1>
+            <h1>Anirudh Krishnan Komaralingam</h1>
         </div>
 
         <div class="page-subheading" align="center">
