--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .page-heading {
             font-size: 1.2em;
             font-family: 'Courier New', Courier, monospace;
-            margin-bottom: 
+            margin-bottom: 0
         }
 
         .footer {
