--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <img src="assets/icons/Google Cloud.svg" alt="google-cloud" height="64px">
                 <img src="assets/icons/HTML5.svg" alt="html" height="64px">
                 <img src="assets/icons/CSS3.svg" alt="css" height="64px">
+                <img src="assets/icons/JavaScript.svg" alt="JS" height="64px">
 
             </div>
         </div>
