github pages link test

--- a/index.html
+++ b/index.html
@@ -318,7 +318,10 @@
             </p>
         </div> -->
 
-
+        <div id="github-pages">
+            <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
+            <a href="ocr/">Optical Character Recognition</a>
+        </div>
 
 
 
