home page link update

--- a/index.html
+++ b/index.html
@@ -319,8 +319,13 @@
         </div> -->
 
         <div id="github-pages">
+            <h2>GitHub Pages</h2>
             <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
+            <br>
+            <br>
             <a href="ocr/">Optical Character Recognition</a>
+            <br>
+            <br>
         </div>
 
 
