gif updates for kuka and lane predict projects

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <div class="card__cover">
                                 <span>Industrial Robot Simulations and Control</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
-                                <img src="/assets/images/projects/academic/kuka-modeling-control.gif" alt="kuka">
+                                <img src="/assets/images/projects/academic/kuka-modeling-control-2.gif" alt="kuka">
                             </div>
                             <!-- <div class="card__content">
                                 <h4><b>Industrial Robot Simulations and Control</b></h4>
@@ -224,7 +224,7 @@
                             <div class="card__cover">
                                 <span>Lane Detection and Turn Prediction</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
-                                <img src="/assets/images/projects/academic/lane-turn-prediction.gif" alt="nist2">
+                                <img src="/assets/images/projects/academic/lane-turn-prediction-2.gif" alt="nist2" style="object-fit: contain; background-color: black;">
                             </div>
                             <!-- <div class="card__content">
                                 <h4><b>Agnostic Robot Programming Paradigms</b></h4>
