--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         </div>
 
         <div class="links-bar">
-            <div class="links-bar-item">
+            <div class="links-bar-item linkedin-link">
                 <a href="https://linkedin.com/in/anikk94">
                     <img src="/assets/images/index/LinkedinLogo-resized.png" alt="Linkedin-logo" width="180px">
                 </a>
 
             </div>
-            <div class="links-bar-item">
+            <div class="links-bar-item resume-link">
                 <a
-                    href="https://docs.google.com/document/d/1flMjnzFinlhrwaGLbLPCeEJ_9LvhKeUw/edit?usp=drive_link&ouid=105897558271725871500&rtpof=true&sd=true">
+                    href="https://docs.google.com/document/d/16q9R6ZiUMdpb80eMPkxN1lu30ZDpzz5g/edit?usp=sharing&ouid=105897558271725871500&rtpof=true&sd=true">
                     <img src="/assets/images/index/cv-resume-resized.png" alt="cv-resume-logo" width="180px">
                 </a>
             </div>
 
-            <div class="links-bar-item">
+            <div class="links-bar-item github-link">
                 <a href="https://github.com/anikk94">
                     <img src="/assets/images/index/githubLogo-resized.png" alt="github-logo" width="180px">
                 </a>
@@ -95,7 +95,7 @@
                 <!-- </a> -->
             </h2>
 
-            <h3>NIST</h3>
+            <!-- <h3>NIST</h3> -->
             <div hidden>
                 <p>Industrial Robot Simulations and Control</p>
                 <p>Agnostic Robot Programming Paradigms</p>
@@ -104,9 +104,9 @@
 
             <section class="projects-nist" id="project__section">
                 <div class="cards">
-                    <!-- Industrial Robot Simulations and Control -->
-                    <div hidden class="card" data-aos="fade-up">
-                        <!-- <a href="pages/projects/nist/ebike-conversion.html"> -->
+                    <!-- Fanuc Robot Control -->
+                    <div class="card" data-aos="fade-up">
+                        <a href="/pages/projects/nist/fanuc.html">
                             <div class="card__cover">
                                 <span>Industrial Robot Simulations and Control</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
@@ -117,10 +117,11 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi reprehenderit modi
                                     inventore
                                     nisi, excepturi sit.</p>
-                                    <button class="cardBtn" type="button">Link here</button>
-                                </div> -->
-                            </a>
-                        </div>
+                                <button class="cardBtn" type="button">Link here</button>
+                            </div> -->
+                        </a>
+                    </div>
+
                     <!-- Agnostic Robot Programming Paradigms -->
                     <div hidden class="card" data-aos="fade-up">
                         <a href="pages/projects/nist/bike-computer.html">
@@ -134,10 +135,11 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi reprehenderit modi
                                     inventore
                                     nisi, excepturi sit.</p>
-                                    <button class="cardBtn" type="button">Link here</button>
+                                <button class="cardBtn" type="button">Link here</button>
                             </div> -->
                         </a>
                     </div>
+
                     <!-- 6DOF Manipulator Teleoperation -->
                     <div hidden class="card" data-aos="fade-up">
                         <a href="pages/projects/nist/home-automation-systems.html">
@@ -155,10 +157,11 @@
                             </div> -->
                         </a>
                     </div>
+
                     <!-- ARIAC 2024 -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/nist/ariac2024.html"> -->
-                        <a href="#">
+                        <a href="https://github.com/anikk94/ARIAC_2021">
                             <div class="card__cover">
                                 <span>ARIAC 2024</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
@@ -173,12 +176,10 @@
                             </div> -->
                         </a>
                     </div>
-
-
                 </div>
             </section>
             
-            <h3>Academic</h3>
+            <!-- <h3>Academic</h3> -->
             <div hidden>
                 <!-- s1 -->
                 <p>LQG Controller for 2 Pendulum Cart</p>
@@ -241,7 +242,7 @@
                 </div>
             </section>
 
-            <h3>Personal</h3>
+            <!-- <h3>Personal</h3> -->
 
             <section class="projects-personal" id="project__section">
                 <div class="cards">
