hide unfinished card

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
 
             <section class="projects-nist" id="project__section">
-                <div class="cards">
+                <div hidden class="cards">
                     <!-- Fanuc Robot Control -->
                     <div class="card" data-aos="fade-up">
                         <a href="/pages/projects/nist/fanuc.html">
