--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             </div>
 
             <section class="projects-nist" id="project__section">
-                <div hidden class="cards">
+                <div class="cards">
                     <!-- Fanuc Robot Control -->
-                    <div class="card" data-aos="fade-up">
+                    <div hidden class="card" data-aos="fade-up">
                         <a href="/pages/projects/nist/fanuc.html">
                             <div class="card__cover">
                                 <span>Industrial Robot Simulations and Control</span>
