project page video updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anikk.github.io</title>
 
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -161,7 +161,7 @@
                     <!-- ARIAC 2024 -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/nist/ariac2024.html"> -->
-                        <a href="https://github.com/anikk94/ARIAC_2021">
+                        <a href="https://github.com/anikk94/ARIAC_2021#ariac_2021">
                             <div class="card__cover">
                                 <span>ARIAC 2024</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
@@ -203,9 +203,9 @@
                     <!-- Industrial Robot Simulations and Control -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/nist/ebike-conversion.html"> -->
-                        <a href="#">
+                        <a href="pages/projects/academic/6dof-kuka-modeling-control-simulation.html">
                             <div class="card__cover">
-                                <span>Industrial Robot Simulations and Control</span>
+                                <span>Industrial Robot Simulation and Control</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
                                 <img src="/assets/images/projects/academic/kuka-modeling-control-2.gif" alt="kuka">
                             </div>
@@ -221,11 +221,11 @@
                     <!-- Lane Detection and Turn Prediction -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/nist/bike-computer.html"> -->
-                        <a href="#">
+                        <a href="pages/projects/academic/land-detection.html">
                             <div class="card__cover">
                                 <span>Lane Detection and Turn Prediction</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
-                                <img src="/assets/images/projects/academic/lane-turn-prediction-2.gif" alt="nist2" style="object-fit: contain; background-color: black;">
+                                <img src="/assets/images/projects/academic/lane-turn-prediction_small.gif" alt="nist2" style="object-fit: contain; background-color: black;">
                             </div>
                             <!-- <div class="card__content">
                                 <h4><b>Agnostic Robot Programming Paradigms</b></h4>
@@ -236,9 +236,6 @@
                             </div> -->
                         </a>
                     </div>
-                    
-
-
                 </div>
             </section>
 
@@ -249,11 +246,12 @@
                     <!-- ebike conversion -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/personal/ebike-conversion.html"> -->
-                        <a href="#">
+                        <a href="pages/projects/personal/ebike-conversion.html">
                             <div class="card__cover">
                                 <span>eBike Conversion</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
-                                <img src="/assets/images/projects/personal/ebike_on_train_0.2.jpg" alt="Avatar">
+                                <!-- <img src="/assets/images/projects/personal/ebike_on_train_0.2.jpg" alt="Avatar"> -->
+                                <img src="/assets/images/projects/personal/ebike1.jpg" alt="Avatar">
                             </div>
                             <!-- <div class="card__content">
                                 <h4><b>eBike Conversion</b></h4>
@@ -267,7 +265,7 @@
                     <!-- bike computer -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/personal/bike-computer.html"> -->
-                        <a href="#">
+                        <!-- <a href="#"> -->
                             <div class="card__cover">
                                 <span>Bike Computer</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
@@ -280,16 +278,16 @@
                                     nisi, excepturi sit.</p>
                                     <button class="cardBtn" type="button">Link here</button>
                             </div> -->
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- home sensor systems -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/personal/home-automation-systems.html"> -->
-                        <a href="#">
+                        <a href="pages/projects/personal/home-automation-systems.html">
                             <div class="card__cover">
                                 <span>Home Automation Systems</span>
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
-                                <img src="/assets/images/projects/personal/Ebin_v3.png" alt="door-sensor">
+                                <img src="/assets/images/projects/personal/ebin.gif" alt="door-sensor">
                             </div>
                             <!-- <div class="card__content">
                                 <h4><b>Home Sensor Systems</b></h4>
