--- a/pages/projects/personal/ebike-conversion.html
+++ b/pages/projects/personal/ebike-conversion.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>eBike Conversion</title>
 </head>
+
 <body>
   <h1>eBike Conversion</h1>
-  
+  <iframe width="1280" height="720" src="https://www.youtube.com/embed/Hn3OgEnsIGM?si=oWO97A4KmXzIB3a8"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
 </body>
+
 </html>
