--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anikk.github.io</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -336,7 +336,7 @@
         <p id="footer-date">MONTH YEAR</p>
     </div>
 
-    <script src="index.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
