links update carSim

--- a/index.html
+++ b/index.html
@@ -318,13 +318,16 @@
         </div> -->
 
         <div id="github-pages">
-            <h2>GitHub Pages</h2>
-            <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
-            <br>
-            <br>
-            <a href="ocr/">Optical Character Recognition</a>
-            <br>
-            <br>
+            <h2>Highlighted Projects (Interactive)</h2>
+            <p>
+                <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
+            </p>
+            <p>
+                <a href="self_driving_car_sim/"></a>
+            </p>
+            <p>
+                <a href="ocr/">Optical Character Recognition</a>
+            </p>
         </div>
 
 
