--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
             </p>
             <p>
-                <a href="self_driving_car_sim/"></a>
+                <a href="self_driving_car_sim/">Self Driving Car Simulation</a>
             </p>
             <p>
                 <a href="ocr/">Optical Character Recognition</a>
