change page text

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </div> -->
 
         <div id="github-pages">
-            <h2>Highlighted Projects (Interactive)</h2>
+            <h2>Mini Projects (Interactive)</h2>
             <p>
                 <a href="javascript_mini_projects/">JavaScript Mini Projects</a>
             </p>
