adding self driving car sim project

--- a/index.html
+++ b/index.html
@@ -243,6 +243,23 @@
 
             <section class="projects-personal" id="project__section">
                 <div class="cards">
+                    <!-- self driving car simulation -->
+                    <div class="card" data-aos="fade-up">
+                        <!-- <a href="pages/projects/personal/ebike-conversion.html"> -->
+                        <span>
+                            <div class="card__cover">
+                                <span>Self Driving Car Simulation</span>
+                                <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
+                                <!-- <img src="/assets/images/projects/personal/ebike_on_train_0.2.jpg" alt="Avatar"> -->
+                                <!-- <img src="/assets/images/projects/personal/ebike1.jpg" alt="Avatar"> -->
+                                <video width="460" height="360" autoplay loop>
+                                    <source src="assets/videos/self_driving_car_demo.mp4" type="video/mp4">
+                                    Your browser does not support vido tag.
+                                </video>
+                            </div>
+                        </span>
+                        <!-- </a> -->
+                    </div>
                     <!-- ebike conversion -->
                     <div class="card" data-aos="fade-up">
                         <!-- <a href="pages/projects/personal/ebike-conversion.html"> -->
