--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <!-- <img src="https://picsum.photos/290/150" alt="Avatar"> -->
                                 <!-- <img src="/assets/images/projects/personal/ebike_on_train_0.2.jpg" alt="Avatar"> -->
                                 <!-- <img src="/assets/images/projects/personal/ebike1.jpg" alt="Avatar"> -->
-                                <video width="460" height="360" autoplay loop>
+                                <video width="460" height="360" autoplay="true" controls loop>
                                     <source src="assets/videos/self_driving_car_demo.mp4" type="video/mp4">
                                     Your browser does not support vido tag.
                                 </video>
